Edited wiki page SocketDetails through web user interface.

--- a/wiki/SocketDetails.wiki
+++ b/wiki/SocketDetails.wiki
@@ -1,6 +1,6 @@
 #summary Socket implementation details.
 
-<g:plusone size="small"></g:plusone>
+<g:plusone size="small" href="http://code.google.com/p/redtamarin/wiki/SocketDetails"></g:plusone>
 
 == Introduction ==
 
