--- a/wiki/SocketDetails.wiki
+++ b/wiki/SocketDetails.wiki
@@ -1,6 +1,7 @@
 #summary Socket implementation details.
 
-<g:plusone size="small" href="http://code.google.com/p/redtamarin/wiki/SocketDetails"></g:plusone>
+<meta name="title" content="redtamarin - Socket implementation details" />
+<g:plusone size="small"></g:plusone>
 
 == Introduction ==
 
