--- a/wiki/SocketDetails.wiki
+++ b/wiki/SocketDetails.wiki
@@ -1,7 +1,6 @@
 #summary Socket implementation details.
 
-<meta name="title" content="redtamarin - Socket implementation details"></meta>
-<g:plusone size="small"></g:plusone>
+<g:plusone size="tall"></g:plusone>
 
 == Introduction ==
 
