Edited wiki page Tamarin through web user interface.

--- a/wiki/Tamarin.wiki
+++ b/wiki/Tamarin.wiki
@@ -94,6 +94,7 @@ compiler provides a performance benefit for many applications.
  * [http://code.google.com/p/mod-actionscript/ mod-actionscript] Apache module for running server-side !ActionScript 3
 
 *documents:*
+ * (PDF) [http://www.stanford.edu/class/ee380/Abstracts/061206-CPUBLISH_avm_tamrin_stanford_Dec6.pdf Adobe Flash Player ActionScript Virtual Machine (Tamarin)] by Rick Reitmaier (Adobe) ([http://www.youtube.com/watch?v=lMSdoBqdeng video on YouTube])
  * (PDF) [http://www.adobe.com/devnet/actionscript/articles/avm2overview.pdf AVM2 Overview] ([https://wiki.mozilla.org/Tamarin::AVM2_Overview_Errata errata]) ([http://wiki.libspark.org/wiki/AVM2/Overview japanese translation])
  * (PDF) [http://www.onflex.org/ACDS/AS3TuningInsideAVM2JIT.pdf ActionScript 3.0 and AVM2: Performance Tuning] by Gary Grossman (Adobe)
  * (PDF) [http://learn.adobe.com/wiki/spaces/exportspace.action?key=AVM2 AVM2 wiki export] (Adobe)
