Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -53,5 +53,5 @@
     * [Tutorials Tutorials]
       * [TutorialsVideo Video Tutorials]
     * [FAQ FAQ]
-
-  
+  * Old Stuff
+      * [Build_old HOWTO Build]
