--- a/wiki/VMPI.wiki
+++ b/wiki/VMPI.wiki
@@ -51,5 +51,15 @@ src
 └── ...
 }}}
 
+the simpler definition is as follow
+
+*VMPI.h* will define "interfaces"
+
+and depending on *system-selection.h* 
+
+a specific platform implementation of the VMPI interfaces will be compiled
+
+either *mac-platform.h*, or *unix-platform.h* or *win32-platform.h*, etc.
+
 
 == Details ==
